crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP041.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP041 [*] Replace aliased errors with `TimeoutError`
 --> UP041.py:5:8
  |
3 | try:
4 |     pass
5 | except asyncio.TimeoutError:
  |        ^^^^^^^^^^^^^^^^^^^^
6 |     pass
  |
help: Replace `asyncio.TimeoutError` with builtin `TimeoutError`
2 | # These should be fixed
3 | try:
4 |     pass
  - except asyncio.TimeoutError:
5 + except TimeoutError:
6 |     pass
7 | 
8 | try:

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:10:8
   |
 8 | try:
 9 |     pass
10 | except socket.timeout:
   |        ^^^^^^^^^^^^^^
11 |     pass
   |
help: Replace `socket.timeout` with builtin `TimeoutError`
7  | 
8  | try:
9  |     pass
   - except socket.timeout:
10 + except TimeoutError:
11 |     pass
12 | 
13 | try:

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:15:8
   |
13 | try:
14 |     pass
15 | except concurrent.futures.TimeoutError:
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 |     pass
   |
help: Replace `concurrent.futures.TimeoutError` with builtin `TimeoutError`
12 | 
13 | try:
14 |     pass
   - except concurrent.futures.TimeoutError:
15 + except TimeoutError:
16 |     pass
17 | 
18 | # Should NOT be in parentheses when replaced

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:22:8
   |
20 | try:
21 |     pass
22 | except (asyncio.TimeoutError,):
   |        ^^^^^^^^^^^^^^^^^^^^^^^
23 |     pass
   |
help: Replace with builtin `TimeoutError`
19 | 
20 | try:
21 |     pass
   - except (asyncio.TimeoutError,):
22 + except TimeoutError:
23 |     pass
24 | 
25 | try:

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:27:8
   |
25 | try:
26 |     pass
27 | except (socket.timeout,):
   |        ^^^^^^^^^^^^^^^^^
28 |     pass
   |
help: Replace with builtin `TimeoutError`
24 | 
25 | try:
26 |     pass
   - except (socket.timeout,):
27 + except TimeoutError:
28 |     pass
29 | 
30 | try:

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:32:8
   |
30 | try:
31 |     pass
32 | except (concurrent.futures.TimeoutError,):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
33 |     pass
   |
help: Replace with builtin `TimeoutError`
29 | 
30 | try:
31 |     pass
   - except (concurrent.futures.TimeoutError,):
32 + except TimeoutError:
33 |     pass
34 | 
35 | try:

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:37:8
   |
35 | try:
36 |     pass
37 | except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
38 |     pass
   |
help: Replace with builtin `TimeoutError`
34 | 
35 | try:
36 |     pass
   - except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError):
37 + except TimeoutError:
38 |     pass
39 | 
40 | # Should be kept in parentheses (because multiple)

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:44:8
   |
42 | try:
43 |     pass
44 | except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError, KeyError, TimeoutError):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
45 |     pass
   |
help: Replace with builtin `TimeoutError`
41 | 
42 | try:
43 |     pass
   - except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError, KeyError, TimeoutError):
44 + except (KeyError, TimeoutError):
45 |     pass
46 | 
47 | # First should change, second should not

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:52:8
   |
50 | try:
51 |     pass
52 | except (asyncio.TimeoutError, error):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
53 |     pass
   |
help: Replace with builtin `TimeoutError`
49 | from .mmap import error
50 | try:
51 |     pass
   - except (asyncio.TimeoutError, error):
52 + except (TimeoutError, error):
53 |     pass
54 | 
55 | # These should not change

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:82:5
   |
81 |   raise (
82 | /     asyncio.
83 | |     # text
84 | |        TimeoutError
   | |___________________^
85 |   )
   |
help: Replace `asyncio.TimeoutError` with builtin `TimeoutError`
79 | 
80 | 
81 | raise (
   -     asyncio.
   -     # text
   -        TimeoutError
82 +     TimeoutError
83 | )
note: This is an unsafe fix and may change runtime behavior
