crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__async_timeout_error_alias_not_applied_py310.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:10:8
   |
 8 | try:
 9 |     pass
10 | except socket.timeout:
   |        ^^^^^^^^^^^^^^
11 |     pass
   |
help: Replace `socket.timeout` with builtin `TimeoutError`
7  | 
8  | try:
9  |     pass
   - except socket.timeout:
10 + except TimeoutError:
11 |     pass
12 | 
13 | try:

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:27:8
   |
25 | try:
26 |     pass
27 | except (socket.timeout,):
   |        ^^^^^^^^^^^^^^^^^
28 |     pass
   |
help: Replace with builtin `TimeoutError`
24 | 
25 | try:
26 |     pass
   - except (socket.timeout,):
27 + except TimeoutError:
28 |     pass
29 | 
30 | try:

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:37:8
   |
35 | try:
36 |     pass
37 | except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
38 |     pass
   |
help: Replace with builtin `TimeoutError`
34 | 
35 | try:
36 |     pass
   - except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError):
37 + except (TimeoutError, asyncio.TimeoutError, concurrent.futures.TimeoutError):
38 |     pass
39 | 
40 | # Should be kept in parentheses (because multiple)

UP041 [*] Replace aliased errors with `TimeoutError`
  --> UP041.py:44:8
   |
42 | try:
43 |     pass
44 | except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError, KeyError, TimeoutError):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
45 |     pass
   |
help: Replace with builtin `TimeoutError`
41 | 
42 | try:
43 |     pass
   - except (asyncio.TimeoutError, socket.timeout, concurrent.futures.TimeoutError, KeyError, TimeoutError):
44 + except (asyncio.TimeoutError, concurrent.futures.TimeoutError, KeyError, TimeoutError):
45 |     pass
46 | 
47 | # First should change, second should not
